added device-manager and its libs

--- a/angular.json
+++ b/angular.json
@@ -60,9 +60,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -90,10 +88,7 @@
               "apps/mqtt-client/tsconfig.spec.json",
               "apps/mqtt-client/tsconfig.editor.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/mqtt-client/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/mqtt-client/**/*"]
           }
         },
         "test": {
@@ -102,9 +97,7 @@
             "jestConfig": "apps/mqtt-client/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/mqtt-client"
-          ]
+          "outputs": ["coverage/apps/mqtt-client"]
         }
       }
     },
@@ -121,9 +114,7 @@
             "outputPath": "dist/apps/mqtt-broker",
             "main": "apps/mqtt-broker/src/main.ts",
             "tsConfig": "apps/mqtt-broker/tsconfig.app.json",
-            "assets": [
-              "apps/mqtt-broker/src/assets"
-            ]
+            "assets": ["apps/mqtt-broker/src/assets"]
           },
           "configurations": {
             "production": {
@@ -138,9 +129,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -155,10 +144,7 @@
               "apps/mqtt-broker/tsconfig.app.json",
               "apps/mqtt-broker/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/mqtt-broker/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/mqtt-broker/**/*"]
           }
         },
         "test": {
@@ -167,9 +153,7 @@
             "jestConfig": "apps/mqtt-broker/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/mqtt-broker"
-          ]
+          "outputs": ["coverage/apps/mqtt-broker"]
         }
       }
     },
@@ -186,9 +170,7 @@
             "outputPath": "dist/apps/esp-pir-manager",
             "main": "apps/esp-pir-manager/src/main.ts",
             "tsConfig": "apps/esp-pir-manager/tsconfig.app.json",
-            "assets": [
-              "apps/esp-pir-manager/src/assets"
-            ]
+            "assets": ["apps/esp-pir-manager/src/assets"]
           },
           "configurations": {
             "production": {
@@ -203,9 +185,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -220,10 +200,7 @@
               "apps/esp-pir-manager/tsconfig.app.json",
               "apps/esp-pir-manager/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/esp-pir-manager/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/esp-pir-manager/**/*"]
           }
         },
         "test": {
@@ -232,9 +209,7 @@
             "jestConfig": "apps/esp-pir-manager/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/esp-pir-manager"
-          ]
+          "outputs": ["coverage/apps/esp-pir-manager"]
         }
       }
     },
@@ -251,10 +226,7 @@
               "libs/utils/tsconfig.lib.json",
               "libs/utils/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/utils/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/utils/**/*"]
           }
         },
         "test": {
@@ -263,9 +235,7 @@
             "jestConfig": "libs/utils/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/libs/utils"
-          ]
+          "outputs": ["coverage/libs/utils"]
         }
       }
     },
@@ -282,9 +252,7 @@
             "outputPath": "dist/apps/esp-update-server",
             "main": "apps/esp-update-server/src/main.ts",
             "tsConfig": "apps/esp-update-server/tsconfig.app.json",
-            "assets": [
-              "apps/esp-update-server/src/assets"
-            ]
+            "assets": ["apps/esp-update-server/src/assets"]
           },
           "configurations": {
             "production": {
@@ -299,9 +267,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -316,10 +282,7 @@
               "apps/esp-update-server/tsconfig.app.json",
               "apps/esp-update-server/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/esp-update-server/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/esp-update-server/**/*"]
           }
         },
         "test": {
@@ -328,9 +291,7 @@
             "jestConfig": "apps/esp-update-server/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/esp-update-server"
-          ]
+          "outputs": ["coverage/apps/esp-update-server"]
         }
       }
     },
@@ -347,9 +308,7 @@
             "outputPath": "dist/apps/adesso-commuter-server",
             "main": "apps/adesso-commuter-server/src/main.ts",
             "tsConfig": "apps/adesso-commuter-server/tsconfig.app.json",
-            "assets": [
-              "apps/adesso-commuter-server/src/assets"
-            ]
+            "assets": ["apps/adesso-commuter-server/src/assets"]
           },
           "configurations": {
             "production": {
@@ -364,9 +323,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -393,9 +350,7 @@
             "jestConfig": "apps/adesso-commuter-server/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/adesso-commuter-server"
-          ]
+          "outputs": ["coverage/apps/adesso-commuter-server"]
         }
       }
     },
@@ -412,9 +367,7 @@
             "outputPath": "dist/apps/alexa-connector",
             "main": "apps/alexa-connector/src/main.ts",
             "tsConfig": "apps/alexa-connector/tsconfig.app.json",
-            "assets": [
-              "apps/alexa-connector/src/assets"
-            ]
+            "assets": ["apps/alexa-connector/src/assets"]
           },
           "configurations": {
             "production": {
@@ -429,9 +382,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -446,10 +397,7 @@
               "apps/alexa-connector/tsconfig.app.json",
               "apps/alexa-connector/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/alexa-connector/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/alexa-connector/**/*"]
           }
         },
         "test": {
@@ -458,9 +406,7 @@
             "jestConfig": "apps/alexa-connector/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/alexa-connector"
-          ]
+          "outputs": ["coverage/apps/alexa-connector"]
         }
       }
     },
@@ -477,9 +423,7 @@
             "outputPath": "dist/apps/api-gateway",
             "main": "apps/api-gateway/src/main.ts",
             "tsConfig": "apps/api-gateway/tsconfig.app.json",
-            "assets": [
-              "apps/api-gateway/src/assets"
-            ]
+            "assets": ["apps/api-gateway/src/assets"]
           },
           "configurations": {
             "production": {
@@ -494,9 +438,7 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -511,10 +453,7 @@
               "apps/api-gateway/tsconfig.app.json",
               "apps/api-gateway/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/api-gateway/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/api-gateway/**/*"]
           }
         },
         "test": {
@@ -523,9 +462,7 @@
             "jestConfig": "apps/api-gateway/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/api-gateway"
-          ]
+          "outputs": ["coverage/apps/api-gateway"]
         }
       }
     },
@@ -542,10 +479,7 @@
               "libs/auth/tsconfig.lib.json",
               "libs/auth/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/auth/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/auth/**/*"]
           }
         },
         "test": {
@@ -554,9 +488,7 @@
             "jestConfig": "libs/auth/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/libs/auth"
-          ]
+          "outputs": ["coverage/libs/auth"]
         }
       }
     },
@@ -573,10 +505,7 @@
               "libs/messenger-connector/tsconfig.lib.json",
               "libs/messenger-connector/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/messenger-connector/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/messenger-connector/**/*"]
           }
         },
         "test": {
@@ -585,9 +514,115 @@
             "jestConfig": "libs/messenger-connector/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/libs/messenger-connector"
-          ]
+          "outputs": ["coverage/libs/messenger-connector"]
+        }
+      }
+    },
+    "device-manager": {
+      "root": "apps/device-manager",
+      "sourceRoot": "apps/device-manager/src",
+      "projectType": "application",
+      "prefix": "device-manager",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/device-manager",
+            "main": "apps/device-manager/src/main.ts",
+            "tsConfig": "apps/device-manager/tsconfig.app.json",
+            "assets": ["apps/device-manager/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/device-manager/src/environments/environment.ts",
+                  "with": "apps/device-manager/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "device-manager:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/device-manager/tsconfig.app.json",
+              "apps/device-manager/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/device-manager/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/device-manager"],
+          "options": {
+            "jestConfig": "apps/device-manager/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "api-device-feature": {
+      "root": "libs/api/device/feature",
+      "sourceRoot": "libs/api/device/feature/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/api/device/feature/tsconfig.lib.json",
+              "libs/api/device/feature/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/api/device/feature/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/api/device/feature"],
+          "options": {
+            "jestConfig": "libs/api/device/feature/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "api-device-data-access": {
+      "root": "libs/api/device/data-access",
+      "sourceRoot": "libs/api/device/data-access/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/api/device/data-access/tsconfig.lib.json",
+              "libs/api/device/data-access/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/api/device/data-access/**/*"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/api/device/data-access"],
+          "options": {
+            "jestConfig": "libs/api/device/data-access/jest.config.js",
+            "passWithNoTests": true
+          }
         }
       }
     }
