--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,15 @@
     "paths": {
       "@smart-home-conx/utils": ["libs/utils/src/index.ts"],
       "@smart-home-conx/auth": ["libs/auth/src/index.ts"],
-      "@smart-home-conx/messenger-connector": ["libs/messenger-connector/src/index.ts"]
+      "@smart-home-conx/messenger-connector": [
+        "libs/messenger-connector/src/index.ts"
+      ],
+      "@smart-home-conx/api/device/feature": [
+        "libs/api/device/feature/src/index.ts"
+      ],
+      "@smart-home-conx/api/device/data-access": [
+        "libs/api/device/data-access/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
