--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,7 @@
     "messenger-connector": { "tags": [] },
     "device-manager": { "tags": [] },
     "api-device-feature": { "tags": [] },
-    "api-device-data-access": { "tags": [] }
+    "api-device-data-access": { "tags": [] },
+    "sensor-connector": { "tags": [] }
   }
 }
