--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose -f docker-compose.dev.yml up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:esp-pir-manager:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:api-gateway:publish:prod",
+    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:esp-pir-manager:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod",
     "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
@@ -44,6 +44,17 @@
     "docker:esp-pir-manager:push-to-reg": "docker push 192.168.178.28:5000/esp-pir-manager:latest",
     "docker:esp-pir-manager:publish:dev": "npm run docker:esp-pir-manager:build-for-armv7:dev && npm run docker:esp-pir-manager:push-to-reg",
     "docker:esp-pir-manager:publish:prod": "npm run docker:esp-pir-manager:build-for-armv7:prod && npm run docker:esp-pir-manager:push-to-reg",
+    "########### sensor-connector ###########": "############################################################################################################",
+    "start:sensor-connector": "nx serve sensor-connector",
+    "build:sensor-connector": "nx build sensor-connector",
+    "test:sensor-connector": "nx test sensor-connector",
+    "docker:sensor-connector": "docker build -t sensor-connector -f apps/sensor-connector/Dockerfile .",
+    "ncc:sensor-connector": "ncc build dist/apps/sensor-connector/main.js -m -C -o dist/apps/sensor-connector/vendor",
+    "docker:sensor-connector:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/sensor-connector:latest -f ./apps/sensor-connector/Dockerfile .",
+    "docker:sensor-connector:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/sensor-connector:latest -f ./apps/sensor-connector/Dockerfile .",
+    "docker:sensor-connector:push-to-reg": "docker push 192.168.178.28:5000/sensor-connector:latest",
+    "docker:sensor-connector:publish:dev": "npm run docker:sensor-connector:build-for-armv7:dev && npm run docker:sensor-connector:push-to-reg",
+    "docker:sensor-connector:publish:prod": "npm run docker:sensor-connector:build-for-armv7:prod && npm run docker:sensor-connector:push-to-reg",
     "########### device-manager ###########": "############################################################################################################",
     "start:device-manager": "nx serve device-manager",
     "build:device-manager": "nx build device-manager",
