--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
+    "start": "run-p start:mqtt-client start:mqtt-broker",
     "docker:build:all:dev": "docker-compose -f docker-compose.dev.yml build",
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose -f docker-compose.dev.yml up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:esp-pir-manager:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod",
+    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod",
     "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
@@ -33,17 +33,17 @@
     "docker:mqtt-broker:push-to-reg": "docker push 192.168.178.28:5000/mqtt-broker:latest",
     "docker:mqtt-broker:publish:dev": "npm run docker:mqtt-broker:build-for-armv7:dev && npm run docker:mqtt-broker:push-to-reg",
     "docker:mqtt-broker:publish:prod": "npm run docker:mqtt-broker:build-for-armv7:prod && npm run docker:mqtt-broker:push-to-reg",
-    "########### esp-pir-manager ###########": "############################################################################################################",
-    "start:esp-pir-manager": "nx serve esp-pir-manager",
-    "build:esp-pir-manager": "nx build esp-pir-manager",
-    "test:esp-pir-manager": "nx test esp-pir-manager",
-    "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
-    "ncc:esp-pir-manager": "ncc build dist/apps/esp-pir-manager/main.js -m -C -o dist/apps/esp-pir-manager/vendor",
-    "docker:esp-pir-manager:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/esp-pir-manager:latest -f ./apps/esp-pir-manager/Dockerfile .",
-    "docker:esp-pir-manager:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/esp-pir-manager:latest -f ./apps/esp-pir-manager/Dockerfile .",
-    "docker:esp-pir-manager:push-to-reg": "docker push 192.168.178.28:5000/esp-pir-manager:latest",
-    "docker:esp-pir-manager:publish:dev": "npm run docker:esp-pir-manager:build-for-armv7:dev && npm run docker:esp-pir-manager:push-to-reg",
-    "docker:esp-pir-manager:publish:prod": "npm run docker:esp-pir-manager:build-for-armv7:prod && npm run docker:esp-pir-manager:push-to-reg",
+    "########### logger ###########": "############################################################################################################",
+    "start:logger": "nx serve logger",
+    "build:logger": "nx build logger",
+    "test:logger": "nx test logger",
+    "docker:logger": "docker build -t logger -f apps/logger/Dockerfile .",
+    "ncc:logger": "ncc build dist/apps/logger/main.js -m -C -o dist/apps/logger/vendor",
+    "docker:logger:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/logger:latest -f ./apps/logger/Dockerfile .",
+    "docker:logger:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/logger:latest -f ./apps/logger/Dockerfile .",
+    "docker:logger:push-to-reg": "docker push 192.168.178.28:5000/logger:latest",
+    "docker:logger:publish:dev": "npm run docker:logger:build-for-armv7:dev && npm run docker:logger:push-to-reg",
+    "docker:logger:publish:prod": "npm run docker:logger:build-for-armv7:prod && npm run docker:logger:push-to-reg",
     "########### sensor-connector ###########": "############################################################################################################",
     "start:sensor-connector": "nx serve sensor-connector",
     "build:sensor-connector": "nx build sensor-connector",
