--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,16 @@ services:
       - 9053:9053
     restart: always
 
+  logger:
+    image: logger
+    build:
+      context: .
+      dockerfile: apps/logger/Dockerfile
+    container_name: logger
+    ports:
+      - 9032:9032
+    restart: always
+
   mqtt-broker:
     image: mqtt-broker
     build:
@@ -45,18 +55,18 @@ services:
     #   - ./ssl:/app/ssl
     restart: always
 
-  esp-pir-manager:
-    image: esp-pir-manager
-    build:
-      context: .
-      dockerfile: apps/esp-pir-manager/Dockerfile
-    container_name: esp-pir-manager
-    depends_on:
-      - mqtt-broker
-      - api-gateway
-    ports:
-      - 9052:9052
-    restart: always
+  # esp-pir-manager:
+  #   image: esp-pir-manager
+  #   build:
+  #     context: .
+  #     dockerfile: apps/esp-pir-manager/Dockerfile
+  #   container_name: esp-pir-manager
+  #   depends_on:
+  #     - mqtt-broker
+  #     - api-gateway
+  #   ports:
+  #     - 9052:9052
+  #   restart: always
 
   esp-update-server:
     image: esp-update-server
