--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,7 @@
     "auth": { "tags": [] },
     "messenger-connector": { "tags": [] },
     "device-manager": { "tags": [] },
-    "sensor-connector": { "tags": [] }
+    "sensor-connector": { "tags": [] },
+    "logger": { "tags": [] }
   }
 }
