--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose -f docker-compose.dev.yml up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod",
+    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod && npm run docker:mongodb:publish",
+    "########### mongodb ###########": "############################################################################################################",
+    "docker:mongodb:build-for-armv7": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mongodb:latest -f ./mongodb/Dockerfile .",
+    "docker:mongodb:push-to-reg": "docker push 192.168.178.28:5000/mongodb:latest",
+    "docker:mongodb:publish": "npm run docker:mongodb:build-for-armv7 && docker:mongodb:push-to-reg",
     "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
