--- a/angular.json
+++ b/angular.json
@@ -437,28 +437,57 @@
       }
     },
     "messenger-connector": {
-      "root": "libs/messenger-connector",
-      "sourceRoot": "libs/messenger-connector/src",
-      "projectType": "library",
-      "schematics": {},
+      "root": "apps/messenger-connector",
+      "sourceRoot": "apps/messenger-connector/src",
+      "projectType": "application",
+      "prefix": "messenger-connector",
       "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/messenger-connector",
+            "main": "apps/messenger-connector/src/main.ts",
+            "tsConfig": "apps/messenger-connector/tsconfig.app.json",
+            "assets": ["apps/messenger-connector/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/messenger-connector/src/environments/environment.ts",
+                  "with": "apps/messenger-connector/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "messenger-connector:build"
+          }
+        },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "libs/messenger-connector/tsconfig.lib.json",
-              "libs/messenger-connector/tsconfig.spec.json"
+              "apps/messenger-connector/tsconfig.app.json",
+              "apps/messenger-connector/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/messenger-connector/**/*"]
+            "exclude": ["**/node_modules/**", "!apps/messenger-connector/**/*"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/messenger-connector"],
           "options": {
-            "jestConfig": "libs/messenger-connector/jest.config.js",
+            "jestConfig": "apps/messenger-connector/jest.config.js",
             "passWithNoTests": true
-          },
-          "outputs": ["coverage/libs/messenger-connector"]
+          }
         }
       }
     },
